--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/CWSY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/CWSY.cshtml
@@ -23,17 +23,24 @@
                 </ul>
             </div>
             <div class="div_body_top_right">
-                <p class="p_body_top_right">宠物狗</p>
+                <p class="span_body_top_right">宠物狗</p>
                 <ul class="ul_body_top_right">
                     <li class="li_body_top_right" onclick="OpenCXLB(31, '/CWCX/CWCX_CWG', 'PZ=阿拉斯加')">阿拉斯加</li>
                     <li class="li_body_top_right" onclick="OpenCXLB(31, '/CWCX/CWCX_CWG', 'PZ=比熊')">比熊</li>
                     <li class="li_body_top_right" onclick="OpenCXLB(31, '/CWCX/CWCX_CWG', 'PZ=博美犬')">博美犬</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(31, '/CWCX/CWCX_CWG', 'PZ=巴哥')">巴哥</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(31, '/CWCX/CWCX_CWG', 'PZ=比格犬')">比格犬</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(31, '/CWCX/CWCX_CWG', 'PZ=比特犬')">比特犬</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(31, '/CWCX/CWCX_CWG', 'PZ=大白熊')">大白熊</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(31, '/CWCX/CWCX_CWG', 'PZ=斗牛犬')">斗牛犬</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(31, '/CWCX/CWCX_CWG', 'PZ=杜宾犬')">杜宾犬</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(31, '/CWCX/CWCX_CWG', 'PZ=大丹犬')">大丹犬</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(31, '/CWCX/CWCX_CWG', 'PZ=杜高犬')">杜高犬</li>
                     <li class="li_body_top_right" onclick="OpenCXLB(31, '/CWCX/CWCX_CWG', 'PZ=贵宾')">贵宾</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(31, '/CWCX/CWCX_CWG', 'PZ=金毛')">金毛</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(31, '/CWCX/CWCX_CWG', 'PZ=高加索犬')">高加索犬</li>
                     <li class="li_body_top_right" onclick="OpenCXLB(31, '/CWCX/CWCX_CWG', 'PZ=哈士奇')">哈士奇</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(31, '/CWCX/CWCX_CWG', 'PZ=格力犬')">格力犬</li>
                 </ul>
-                <p class="p_body_top_right">宠物猫</p>
+                <p class="span_body_top_right">宠物猫</p>
                 <ul class="ul_body_top_right">
                     <li class="li_body_top_right" onclick="OpenCXLB(32, '/CWCX/CWCX_CWM', 'PZ=波斯猫')">波斯猫</li>
                     <li class="li_body_top_right" onclick="OpenCXLB(32, '/CWCX/CWCX_CWM', 'PZ=金吉拉')">金吉拉</li>
@@ -42,14 +49,32 @@
                     <li class="li_body_top_right" onclick="OpenCXLB(32, '/CWCX/CWCX_CWM', 'PZ=蓝猫')">蓝猫</li>
                     <li class="li_body_top_right" onclick="OpenCXLB(32, '/CWCX/CWCX_CWM', 'PZ=折耳猫')">折耳猫</li>
                     <li class="li_body_top_right" onclick="OpenCXLB(32, '/CWCX/CWCX_CWM', 'PZ=雪鞋猫')">雪鞋猫</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(32, '/CWCX/CWCX_CWM', 'PZ=埃及猫')">埃及猫</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(32, '/CWCX/CWCX_CWM', 'PZ=巴厘猫')">巴厘猫</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(32, '/CWCX/CWCX_CWM', 'PZ=伯曼猫')">伯曼猫</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(32, '/CWCX/CWCX_CWM', 'PZ=布偶猫')">布偶猫</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(32, '/CWCX/CWCX_CWM', 'PZ=蒂凡尼猫')">蒂凡尼猫</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(32, '/CWCX/CWCX_CWM', 'PZ=波米拉猫')">波米拉猫</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(32, '/CWCX/CWCX_CWM', 'PZ=德文卷毛猫')">德文卷毛猫</li>
                 </ul>
-                <p class="p_body_top_right">花鸟鱼虫</p>
+                <p class="span_body_top_right">花鸟鱼虫</p>
                 <ul class="ul_body_top_right">
-                    <li class="li_body_top_right" onclick="OpenCXLB(33, '/CWCX/CWCX_HNYC', 'PZ=观赏鱼')">观赏鱼</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(33, '/CWCX/CWCX_HNYC', 'PZ=玩赏鸟')">玩赏鸟</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(33, '/CWCX/CWCX_HNYC', 'PZ=其他小宠')">其他小宠</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(33, '/CWCX/CWCX_HNYC', 'LB=117')">观赏鱼</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(33, '/CWCX/CWCX_HNYC', 'LB=118')">玩赏鸟</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(33, '/CWCX/CWCX_HNYC', 'LB=118')">八哥</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(33, '/CWCX/CWCX_HNYC', 'LB=118')">鹦鹉</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(33, '/CWCX/CWCX_HNYC', 'LB=120')">兔子</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(33, '/CWCX/CWCX_HNYC', 'LB=120')">龟</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(33, '/CWCX/CWCX_HNYC', 'LB=120')">仓鼠</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(33, '/CWCX/CWCX_HNYC', 'LB=120')">荷兰猪</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(33, '/CWCX/CWCX_HNYC', 'LB=120')">蟋蟀</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(33, '/CWCX/CWCX_HNYC', 'LB=120')">蜗牛</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(33, '/CWCX/CWCX_HNYC', 'LB=120')">螃蟹</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(33, '/CWCX/CWCX_HNYC', 'LB=120')">蛙</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(33, '/CWCX/CWCX_HNYC', 'LB=120')">松鼠</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(33, '/CWCX/CWCX_HNYC', 'LB=120')">龙猫</li>
                 </ul>
-                <p class="p_body_top_right">宠物服务</p>
+                <p class="span_body_top_right">宠物服务</p>
                 <ul class="ul_body_top_right">
                     <li class="li_body_top_right" onclick="OpenCXLB(34, '/CWCX/CWCX_CWFW', 'LB=宠物医院')">宠物医院</li>
                     <li class="li_body_top_right" onclick="OpenCXLB(34, '/CWCX/CWCX_CWFW', 'LB=宠物寄养')">宠物寄养</li>
@@ -59,7 +84,7 @@
                     <li class="li_body_top_right" onclick="OpenCXLB(34, '/CWCX/CWCX_CWFW', 'LB=宠物配种')">宠物配种</li>
                     <li class="li_body_top_right" onclick="OpenCXLB(34, '/CWCX/CWCX_CWFW', 'LB=宠物摄影')">宠物摄影</li>
                 </ul>
-                <p class="p_body_top_right">宠物用品</p>
+                <p class="span_body_top_right">宠物用品</p>
                 <ul class="ul_body_top_right">
                     <li class="li_body_top_right" onclick="OpenCXLB(35, '/CWCX/CWCX_CWYPSP', 'LB=狗粮')">狗粮</li>
                     <li class="li_body_top_right" onclick="OpenCXLB(35, '/CWCX/CWCX_CWYPSP', 'LB=狗用品')">狗用品</li>
@@ -69,7 +94,7 @@
                     <li class="li_body_top_right" onclick="OpenCXLB(35, '/CWCX/CWCX_CWYPSP', 'LB=水族箱')">水族箱</li>
                     <li class="li_body_top_right" onclick="OpenCXLB(35, '/CWCX/CWCX_CWYPSP', 'LB=其他用品')">其他用品</li>
                 </ul>
-                <p class="p_body_top_right">宠物公益</p>
+                <p class="span_body_top_right">宠物公益</p>
                 <ul class="ul_body_top_right">
                     <li class="li_body_top_right" onclick="OpenCXLB(36, '/CWCX/CWCX_CWGY', 'LB=宠物赠送')">宠物赠送</li>
                     <li class="li_body_top_right" onclick="OpenCXLB(36, '/CWCX/CWCX_CWGY', 'LB=宠物领养')">宠物领养</li>
