--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/FCSY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/FCSY.cshtml
@@ -88,19 +88,29 @@
                 </ul>
                 <span class="span_body_top_right">厂房租售</span>
                 <ul class="ul_body_top_right">
-                    <li class="li_body_top_right" onclick="OpenCXLB(19, '/FCCX/FCCX_CF', 'MJ=220')">1000平米以下</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(19, '/FCCX/FCCX_CF', 'MJ=221')">1000-2000平米</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(19, '/FCCX/FCCX_CF', 'MJ=222')">2000-5000平米</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(19, '/FCCX/FCCX_CF', 'MJ=223')">5000-8000平米</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(19, '/FCCX/FCCX_CF', 'MJ=224')">8000-12000平米</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(19, '/FCCX/FCCX_CF', 'MJ=225')">12000平米以上</li>
+                    <li class="li_body_top_right" style="width:135px;" onclick="OpenCXLB(19, '/FCCX/FCCX_CF', 'MJ=220')">1000平米以下</li>
+                    <li class="li_body_top_right" style="width:135px;" onclick="OpenCXLB(19, '/FCCX/FCCX_CF', 'MJ=221')">1000-2000平米</li>
+                    <li class="li_body_top_right" style="width:135px;" onclick="OpenCXLB(19, '/FCCX/FCCX_CF', 'MJ=222')">2000-5000平米</li>
+                    <li class="li_body_top_right" style="width:135px;" onclick="OpenCXLB(19, '/FCCX/FCCX_CF', 'MJ=223')">5000-8000平米</li>
+                    <li class="li_body_top_right" style="width:135px;" onclick="OpenCXLB(19, '/FCCX/FCCX_CF', 'MJ=224')">8000-12000平米</li>
+                    <li class="li_body_top_right" style="width:135px;" onclick="OpenCXLB(19, '/FCCX/FCCX_CF', 'MJ=225')">12000平米以上</li>
                 </ul>
-                <span class="span_body_top_right">车位租售</span>
+                <span class="span_body_top_right">仓库租售</span>
                 <ul class="ul_body_top_right">
-                    <li class="li_body_top_right" onclick="OpenCXLB(22, '/FCCX/FCCX_CW', 'MJ=245')">15平米以下</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(22, '/FCCX/FCCX_CW', 'MJ=246')">15-30平米</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(22, '/FCCX/FCCX_CW', 'MJ=247')">30-50平米</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(22, '/FCCX/FCCX_CW', 'MJ=248')">50平米以上</li>
+                    <li class="li_body_top_right" style="width:135px;" onclick="OpenCXLB(20, '/FCCX/FCCX_CK', 'MJ=220')">1000平米以下</li>
+                    <li class="li_body_top_right" style="width:135px;" onclick="OpenCXLB(20, '/FCCX/FCCX_CK', 'MJ=221')">1000-2000平米</li>
+                    <li class="li_body_top_right" style="width:135px;" onclick="OpenCXLB(20, '/FCCX/FCCX_CK', 'MJ=222')">2000-5000平米</li>
+                    <li class="li_body_top_right" style="width:135px;" onclick="OpenCXLB(20, '/FCCX/FCCX_CK', 'MJ=223')">5000-8000平米</li>
+                    <li class="li_body_top_right" style="width:135px;" onclick="OpenCXLB(20, '/FCCX/FCCX_CK', 'MJ=224')">8000-12000平米</li>
+                    <li class="li_body_top_right" style="width:135px;" onclick="OpenCXLB(20, '/FCCX/FCCX_CK', 'MJ=225')">12000平米以上</li>
+                </ul>
+                <span class="span_body_top_right">车位租金</span>
+                <ul class="ul_body_top_right">
+                    <li class="li_body_top_right" style="width:135px;" onclick="OpenCXLB(22, '/FCCX/FCCX_CW', 'MJ=240')">200元/月以下</li>
+                    <li class="li_body_top_right" style="width:135px;" onclick="OpenCXLB(22, '/FCCX/FCCX_CW', 'MJ=241')">200-500元/月</li>
+                    <li class="li_body_top_right" style="width:135px;" onclick="OpenCXLB(22, '/FCCX/FCCX_CW', 'MJ=242')">500-800元/月</li>
+                    <li class="li_body_top_right" style="width:135px;" onclick="OpenCXLB(22, '/FCCX/FCCX_CW', 'MJ=243')">800-1000元/月</li>
+                    <li class="li_body_top_right" style="width:135px;" onclick="OpenCXLB(22, '/FCCX/FCCX_CW', 'MJ=244')">1000元/月以上</li>
                 </ul>
             </div>
         </div>
