--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/ZPSY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/ZPSY.cshtml
@@ -13,7 +13,7 @@
                 <ul class="ul_body_top_left">
                     <li class="li_body_top_left" onmouseover="OpenZWLB('44')">
                         <a class="a_body_top_left">销售/客服/市场/公关</a>
-                        <div class="div_body_top_left_inner" id="44" style="top: -100px; display: inline-block;">
+                        <div class="div_body_top_left_inner" id="44" style="top: -110px; display: inline-block;">
                             <p class="p_body_top_left_inner_first">销售</p>
                             <p class="p_body_top_left_inner_second">
                                 <a class="a_body_top_left_inner_second" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=销售&amp;ZWMC=61')">销售代表</a>
@@ -71,7 +71,7 @@
                     </li>
                     <li class="li_body_top_left" onmouseover="OpenZWLB('45')">
                         <a class="a_body_top_left">人事/行政/后勤/司机</a>
-                        <div class="div_body_top_left_inner" id="45" style="top: -150px; display: none;">
+                        <div class="div_body_top_left_inner" id="45" style="top: -170px; display: none;">
                             <p class="p_body_top_left_inner_first">人事</p>
                             <p class="p_body_top_left_inner_second">
                                 <a class="a_body_top_left_inner_second" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=人事&amp;ZWMC=107')">人事专员/助理</a>
@@ -113,7 +113,7 @@
                     </li>
                     <li class="li_body_top_left" onmouseover="OpenZWLB('46')">
                         <a class="a_body_top_left">生产/制造/机械/质控</a>
-                        <div class="div_body_top_left_inner" id="46" style="top: -200px; display: none;">
+                        <div class="div_body_top_left_inner" id="46" style="top: -220px; display: none;">
                             <p class="p_body_top_left_inner_first">普工/技工</p>
                             <p class="p_body_top_left_inner_second">
                                 <a class="a_body_top_left_inner_second" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=普工/技工&amp;ZWMC=137')">普工</a>
@@ -191,7 +191,7 @@
                     </li>
                     <li class="li_body_top_left" onmouseover="OpenZWLB('47')">
                         <a class="a_body_top_left">法律/教育/翻译/出版</a>
-                        <div class="div_body_top_left_inner" id="47" style="top: -250px; display: none;">
+                        <div class="div_body_top_left_inner" id="47" style="top: -280px; display: none;">
                             <p class="p_body_top_left_inner_first">律师/法务</p>
                             <p class="p_body_top_left_inner_second">
                                 <a class="a_body_top_left_inner_second" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=律师/法务&amp;ZWMC=202')">律师/律师助理</a>
@@ -253,7 +253,7 @@
                     </li>
                     <li class="li_body_top_left" onmouseover="OpenZWLB('48')">
                         <a class="a_body_top_left">餐饮/百货/生活/服务</a>
-                        <div class="div_body_top_left_inner" id="48" style="top: -300px; display: none;">
+                        <div class="div_body_top_left_inner" id="48" style="top: -350px; display: none;width:850px;">
                             <p class="p_body_top_left_inner_first">餐饮</p>
                             <p class="p_body_top_left_inner_second">
                                 <a class="a_body_top_left_inner_second" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=餐饮&amp;ZWMC=254')">服务员</a>
@@ -352,7 +352,7 @@
                     </li>
                     <li class="li_body_top_left" onmouseover="OpenZWLB('49')">
                         <a class="a_body_top_left">医疗/医药/保险</a>
-                        <div class="div_body_top_left_inner" id="49" style="top: -350px; display: none;">
+                        <div class="div_body_top_left_inner" id="49" style="top: -300px; display: none;">
                             <p class="p_body_top_left_inner_first">医药</p>
                             <p class="p_body_top_left_inner_second">
                                 <a class="a_body_top_left_inner_second" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=医药&amp;ZWMC=334')">医药研发/生产</a>
@@ -414,7 +414,7 @@
                     </li>
                     <li class="li_body_top_left" onmouseover="OpenZWLB('50')">
                         <a class="a_body_top_left">金融/银行/财务/管理</a>
-                        <div class="div_body_top_left_inner" id="50" style="top: -400px; display: none;">
+                        <div class="div_body_top_left_inner" id="50" style="top: -250px; display: none;">
                             <p class="p_body_top_left_inner_first">金融/银行/证券/投资</p>
                             <p class="p_body_top_left_inner_second">
                                 <a class="a_body_top_left_inner_second" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=金融/银行/证券/投资&amp;ZWMC=382')">理财/投资顾问</a>
@@ -462,7 +462,7 @@
                     </li>
                     <li class="li_body_top_left" onmouseover="OpenZWLB('51')">
                         <a class="a_body_top_left">能源/化工/环保/汽车</a>
-                        <div class="div_body_top_left_inner" id="51" style="top: -450px; display: none;">
+                        <div class="div_body_top_left_inner" id="51" style="top: -250px; display: none;">
                             <p class="p_body_top_left_inner_first">能源/电力</p>
                             <p class="p_body_top_left_inner_second">
                                 <a class="a_body_top_left_inner_second" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=能源/电力&amp;ZWMC=420')">石油天然气技术人员</a>
@@ -509,7 +509,7 @@
                     </li>
                     <li class="li_body_top_left" onmouseover="OpenZWLB('52')">
                         <a class="a_body_top_left">贸易/采购/物流/仓储</a>
-                        <div class="div_body_top_left_inner" id="52" style="top: -500px; display: none;">
+                        <div class="div_body_top_left_inner" id="52" style="top: -200px; display: none;">
                             <p class="p_body_top_left_inner_first">贸易</p>
                             <p class="p_body_top_left_inner_second">
                                 <a class="a_body_top_left_inner_second" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=贸易&amp;ZWMC=453')">外贸专员/助理</a>
@@ -541,7 +541,7 @@
                     </li>
                     <li class="li_body_top_left" onmouseover="OpenZWLB('53')">
                         <a class="a_body_top_left">广告/设计/娱乐/传媒</a>
-                        <div class="div_body_top_left_inner" id="53" style="top: -500px; display: none;">
+                        <div class="div_body_top_left_inner" id="53" style="top: -300px; display: none;">
                             <p class="p_body_top_left_inner_first">广告/咨询</p>
                             <p class="p_body_top_left_inner_second">
                                 <a class="a_body_top_left_inner_second" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=广告/咨询&amp;ZWMC=474')">广告设计</a>
@@ -602,7 +602,7 @@
                     </li>
                     <li class="li_body_top_left" onmouseover="OpenZWLB('54')">
                         <a class="a_body_top_left">房产/建筑/装修/物业</a>
-                        <div class="div_body_top_left_inner" id="54" style="top: -500px; display: none;">
+                        <div class="div_body_top_left_inner" id="54" style="top: -350px; display: none;">
                             <p class="p_body_top_left_inner_first">房产</p>
                             <p class="p_body_top_left_inner_second">
                                 <a class="a_body_top_left_inner_second" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=房产&amp;ZWMC=525')">房产销售/中介</a>
@@ -653,7 +653,7 @@
                     </li>
                     <li class="li_body_top_left" onmouseover="OpenZWLB('55')">
                         <a class="a_body_top_left">网络/通讯/电子/软件</a>
-                        <div class="div_body_top_left_inner" id="55" style="top: -500px; display: none;">
+                        <div class="div_body_top_left_inner" id="55" style="top: -600px; display: none;">
                             <p class="p_body_top_left_inner_first">计算机/互联网</p>
                             <p class="p_body_top_left_inner_second">
                                 <a class="a_body_top_left_inner_second" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=计算机/互联网&amp;ZWMC=562')">PHP开发工程师</a>
@@ -741,7 +741,7 @@
                     </li>
                     <li class="li_body_top_left" onmouseover="OpenZWLB('56')">
                         <a class="a_body_top_left">农林牧渔/其他</a>
-                        <div class="div_body_top_left_inner" id="56" style="top: -500px; display: none;">
+                        <div class="div_body_top_left_inner" id="56" style="top: -150px; display: none;">
                             <p class="p_body_top_left_inner_first">农林牧渔</p>
                             <p class="p_body_top_left_inner_second">
                                 <a class="a_body_top_left_inner_second" onclick="OpenCXLB(89, '/QZZPCX/QZZPCX_QZZP', 'ZWLB=农林牧渔&amp;ZWMC=640')">养殖人员</a>
